--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -20,7 +20,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: "npm"
       - name: Install dependencies
-        run: rm -rf node_modules package-lock.json && npm install
+        run: rm -rf node_modules package-lock.json && npm install --legacy-peer-deps
       - name: Build
         run: |
           rm -rf .next
